2007-07-02  Brian Warner  <warner@lothar.com>

	* buildbot/process/builder.py (Builder.maybeStartBuild): choose
	the slave randomly rather than always taking the first one. Thanks
	to Pike for the patch. Closes #36.
	* buildbot/test/test_slaves.py: match the change. to avoid huge
	changes to the tests, I added a CHOOSE_SLAVES_RANDOMLY flag which
	enables/disables the round-robin-ness (enabled by default), and
	some unit tests disable it.
	* docs/buildbot.texinfo (Buildmaster Architecture): document it

	* buildbot/slave/bot.py (BuildSlave.__init__): rename the 'host'
	argument to 'buildmaster_host', to make it more obvious that this
	points to the buildmaster. Thanks to Bob Proulx for the
	suggestion.
	* buildbot/scripts/runner.py (slaveTAC): same
	* buildbot/test/test_runner.py (Create.testSlave): match the change

	* contrib/hg_buildbot.py: patch from Frederic Leroy to make this
	work better.

2007-06-17  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_config.py (Factories.testAllSteps): make sure
	we can round-trip all of our current step classes by calling
	getStepFactory() and using the results to make a clone of the
	original step.

	* buildbot/steps/maxq.py: fix import errors. Guess this hasn't been
	used in a while..

	* buildbot/process/factory.py (BuildFactory.addStep): To simplify
	the config file, we're moving to using actual instances instead of
	the (class, kwargs) 'step specification' tuples. BuildFactory
	still keeps a list of tuples internally, but when real instances
	are passed in to addStep(), they are asked for their class and
	kwargs using the new BuildStep.getStepFactory method. BuildFactory
	accepts both instances and the tuple form, and converts instances
	to the tuple form, but the instance form is preferred because it
	gives the Steps a chance to do argument validation. Closes: #11.

	* buildbot/process/buildstep.py (BuildStep.__init__): record the
	factory information necessary to implement getStepFactory. The